# bazel-tips-and-tricks

./: .gitignore  BUILD  README.md  WORKSPACE  custom_rules.bzl  main.py
custom-rules/: BUILD.custom-python  BUILD.custom_python  custom-python-rules.bzl  custom_python.bzl  custom_python.rules.bzl
example-bazel-gui-cli-multimodule/: .bazeliskrc  .bazelrc  BUILD  MODULE.bazel  cli.py  gui.py  packager.py  requirements_lock.txt
example-bazel-gui-cli-multimodule/compressor/: BUILD  tools.py
example-beginner-guide/: BUILD  WORKSPACE  my_build_tool.py  my_custom_rule.bzl  my_input_file.txt
example-book-app/: .bazeliskrc  MODULE.bazel  file_structure.txt
example-book-app/chaptermanager/: BUILD  db.py  exceptions.py
example-book-app/chaptermanager/tests/: test_db.py
example-book-app/chaptermanager/tests/data/: test_chapter.txt
example-book-gen-rule/: BUILD  WORKSPACE  chap_1.txt  chap_2.txt
example-depend-on-workspace/: BUILD  WORKSPACE
example-deploy-artifact/: BUILD  WORKSPACE  deploy.py  mytool.py
example-downloaded-python/: .gitignore  BUILD  BUILD.downloaded-python  README.md  WORKSPACE  custom_rules.bzl  main.py
example-downloaded-python/bazel-bin/: my_out_file.txt
example-downloaded-python/bazel-example-downloaded-python/: BUILD  WORKSPACE  run_example.bat
example-downloaded-python/bazel-example-downloaded-python/bazel-out/: stable-status.txt  volatile-status.txt
example-python-rules/: BUILD  WORKSPACE  main.py  requirements.txt
external-raw-data/: raw_data.txt
