bazel_dep(name = "rules_python", version = "0.20.0")


pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "my_deps",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_deps")


# (Optional) Register a specific python toolchain instead of using the host version
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(name = "python3_11", python_version = "3.11",)
use_repo(python, "python3_11_toolchains")

register_toolchains(
    "@python3_11_toolchains//:all",
)